--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,60 @@
-﻿<Window x:Class="Evaluation_bloc.MainWindow"
+﻿<Window xmlns:Views="clr-namespace:Evaluation_bloc.Views" x:Class="Evaluation_bloc.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Evaluation_bloc"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="600" Width="1000" MinHeight="400" MinWidth="600">
+
+
+
+    <Window.InputBindings>
+        <KeyBinding Gesture="Ctrl+Alt+A" Command="{Binding MakeAdmin}" />
+    </Window.InputBindings>
+
+
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+
+        <Label Grid.Column="2" Grid.Row="0"  Margin="0 10 0 0" Content="Nom"/>
+        <TextBox Grid.Column="3" Grid.Row="0"  Margin="0 10 0 0" Text="" Name ="Nom"/>
+        <Label Grid.Column="4" Grid.Row="0"  Margin="0 10 0 0" Content="Site"/>
+        <TextBox Grid.Column="5" Grid.Row="0"  Margin="0 10 0 0" Text="" Name ="Site"/>
+        <Label Grid.Column="6" Grid.Row="0"  Margin="0 10 0 0" Content="Service"/>
+        <TextBox Grid.Column="7" Grid.Row="0"  Margin="0 10 0 0" Text="" Name ="Service"/>
+        <Button Name="Rechercher" Grid.Column="6" Grid.Row="0" MaxWidth="100" Grid.ColumnSpan="3" Margin="0,10,100,0"  Content="Rechercher" Click="Rechercher_Click"/>
+
+        <ListBox Grid.Column="0" Grid.Row="1" Grid.RowSpan="3"  ItemsSource="{Binding ListeSalaries}" IsSynchronizedWithCurrentItem="True" Margin="0,0,3,0">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Prenom}"/>
+                        <TextBlock Text=" "/>
+                        <TextBlock Text="{Binding Nom}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+
+        </ListBox>
+
+        <Views:UserControl1 Grid.Column="2" Grid.Row="1" DataContext="{Binding SalarieSelected}" Grid.RowSpan="2" Grid.ColumnSpan="10"/>
 
     </Grid>
 </Window>
+
+
