--- a/Admin.xaml
+++ b/Admin.xaml
@@ -5,27 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Evaluation_bloc"
         mc:Ignorable="d"
-        Title="Admin" Height="450" Width="800">
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal" 
+        TextOptions.TextRenderingMode="Auto"        
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{DynamicResource MaterialDesignFont}"
+        Title="Admin" Height="167" Width="333">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="0.25*"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="0.25*"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="5*"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="5*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Button Name="Site" Grid.Column="2" Grid.Row="0" MaxWidth="100" Margin="0,0,0,0" Content="Site" Click="Site_Click"/>
-        <Button Name="Service" Grid.Column="3" Grid.Row="0" MaxWidth="100" Margin="0,0,0,0" Content="Service" Click="Service_Click"/>
+        <Button Name="Site" Grid.Column="0" Grid.Row="0" MaxWidth="100" Margin="0,0,0,0" Content="Site" Click="Site_Click"/>
+        <Button Name="Service" Grid.Column="2" Grid.Row="0" MaxWidth="100" Margin="0,0,0,0" Content="Service" Click="Service_Click"/>
         <Button Name="Salarie" Grid.Column="4" Grid.Row="0" MaxWidth="100" Margin="0,0,0,0" Content="Salarie" Click="Salarie_Click"/>
- 
+
     </Grid>
 </Window>
