--- a/CrudSalarie.xaml
+++ b/CrudSalarie.xaml
@@ -5,24 +5,50 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Evaluation_bloc"
         mc:Ignorable="d"
-        Title="CrudSalarie" Height="450" Width="800">
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal" 
+        TextOptions.TextRenderingMode="Auto"        
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{DynamicResource MaterialDesignFont}"
+        Title="CrudSalarie"  Height="600" Width="1000" MinHeight="400" MinWidth="600">
 
 
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="0.25*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions> 
+
+        <Label Grid.Column="2" Grid.Row="0"  Margin="0 10 0 0" Content="Nom"/>
+        <TextBox Grid.Column="3" Grid.Row="0"  Margin="0 10 0 0" Text="" Name ="Nom"/>
+        <Label Grid.Column="4" Grid.Row="0"  Margin="0 10 0 0" Content="Site"/>
+        <!--<TextBox Grid.Column="5" Grid.Row="0"  Margin="0 10 0 0" Text="" Name ="Site"/> -->
+        <ComboBox Name="Site" Grid.Column="5" Grid.Row="0" ItemsSource="{Binding ListeSites}" DisplayMemberPath="Ville"/>
+        <Label Grid.Column="6" Grid.Row="0"  Margin="0 10 0 0" Content="Service"/>
+        <ComboBox Name="Service" Grid.Column="7" Grid.Row="0" ItemsSource="{Binding ListeServices}" DisplayMemberPath="Nom"/>
+        <!--<TextBox Grid.Column="7" Grid.Row="0"  Margin="0 10 0 0" Text="" Name ="Service"/>-->
+        <Button Name="Rechercher" Grid.Column="6" Grid.Row="0" MaxWidth="110" Grid.ColumnSpan="3" Margin="0,10,100,0"  Content="Rechercher" Click="Rechercher_Click"/>
 
 
-
-        <ListBox Grid.Column="0" Grid.Row="1" Grid.RowSpan="3"  ItemsSource="{Binding ListeSalaries}" IsSynchronizedWithCurrentItem="True" Margin="0,0,3,0">
+        <ListBox Grid.Column="0" Grid.Row="1" Grid.RowSpan="5"  ItemsSource="{Binding ListeSalaries}" IsSynchronizedWithCurrentItem="True" Margin="0,0,3,0">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
@@ -34,10 +60,17 @@
             </ListBox.ItemTemplate>
 
         </ListBox>
-
-        <Views:UserControl1 Grid.Column="1" Grid.Row="1" DataContext="{Binding SalarieSelected}" Grid.RowSpan="2" Grid.ColumnSpan="10"/>
         
-        <StackPanel Grid.Column="2" Grid.Row="2" Grid.ColumnSpan="10" Orientation="Horizontal" Margin="29,20,0,0">
+        <GridSplitter Grid.Row="1" Grid.Column="0" Grid.RowSpan="10" Width="10" Background="LightBlue">
+        </GridSplitter>
+        
+        <Views:ucSalarie Margin="0 0 0 0" Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="10" VerticalAlignment="Bottom" DataContext="{Binding SalarieSelected}" />
+        <Label Grid.Column="3" Grid.Row="2"  Margin="0 20 10 0" Content="Site" HorizontalAlignment="Right"/>
+        <ComboBox Name="SiteSave" Grid.Column="5" Margin="0 20 10 0" Grid.Row="2" ItemsSource="{Binding ListeSites}" DisplayMemberPath="Ville" SelectedValue="{Binding SalarieSelected.Site}" SelectedValuePath="Id"  Grid.ColumnSpan="2" />
+        <Label Grid.Column="3" Grid.Row="3" Margin="0 20 10 0" Content="Service" HorizontalAlignment="Right"/>
+        <ComboBox Name="ServiceSave" Grid.Column="5" Margin="0 20 10 0" Grid.Row="3" ItemsSource="{Binding ListeServices}" DisplayMemberPath="Nom" SelectedValue="{Binding SalarieSelected.Service}" SelectedValuePath="Id" Grid.ColumnSpan="2" />
+
+        <StackPanel Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="7" Orientation="Horizontal" Margin="150,0,0,50">
             <Button Content="Enregistrer" Command="{Binding SaveCommand}"/>
             <Button Content="Supprimer" Margin="20 0 0 0" Command="{Binding DeleteCommand}"/>
             <Button Content="Nouveau" Margin="20 0 0 0" Command="{Binding NewCommand}"/>
