--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,6 +4,15 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Evaluation_bloc"
+        mc:Ignorable="d"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal" 
+        TextOptions.TextRenderingMode="Auto"        
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{DynamicResource MaterialDesignFont}"
         Title="MainWindow" Height="600" Width="1000" MinHeight="400" MinWidth="600">
 
 
@@ -31,13 +40,15 @@
         </Grid.RowDefinitions>
 
 
-        <Label Grid.Column="2" Grid.Row="0"  Margin="0 10 0 0" Content="Nom"/>
+        <Label Grid.Column="2" Grid.Row="0"  Margin="0 20 10 0" Content="Nom"/>
         <TextBox Grid.Column="3" Grid.Row="0"  Margin="0 10 0 0" Text="" Name ="Nom"/>
-        <Label Grid.Column="4" Grid.Row="0"  Margin="0 10 0 0" Content="Site"/>
-        <TextBox Grid.Column="5" Grid.Row="0"  Margin="0 10 0 0" Text="" Name ="Site"/>
-        <Label Grid.Column="6" Grid.Row="0"  Margin="0 10 0 0" Content="Service"/>
-        <TextBox Grid.Column="7" Grid.Row="0"  Margin="0 10 0 0" Text="" Name ="Service"/>
-        <Button Name="Rechercher" Grid.Column="6" Grid.Row="0" MaxWidth="100" Grid.ColumnSpan="3" Margin="0,10,100,0"  Content="Rechercher" Click="Rechercher_Click"/>
+        <Label Grid.Column="4" Grid.Row="0"  Margin="20 20 10 0" Content="Site"/>
+        <!--<TextBox Grid.Column="5" Grid.Row="0"  Margin="0 10 0 0" Text="" Name ="Site"/> -->
+        <ComboBox Name="Site" Grid.Column="5" Grid.Row="0" ItemsSource="{Binding ListeSites}" DisplayMemberPath="Ville"/>
+        <Label Grid.Column="6" Grid.Row="0"  Margin="20 20 10 0" Content="Service"/>
+        <ComboBox Name="Service" Grid.Column="7" Grid.Row="0" ItemsSource="{Binding ListeServices}" DisplayMemberPath="Nom"/>
+        <!--<TextBox Grid.Column="7" Grid.Row="0"  Margin="0 10 0 0" Text="" Name ="Service"/>-->
+        <Button Name="Rechercher" Grid.Column="8" Grid.Row="0" MaxWidth="110" Margin="0,10,100,0"  Content="Rechercher" Click="Rechercher_Click"/>
 
         <ListBox Grid.Column="0" Grid.Row="1" Grid.RowSpan="3"  ItemsSource="{Binding ListeSalaries}" IsSynchronizedWithCurrentItem="True" Margin="0,0,3,0">
             <ListBox.ItemTemplate>
@@ -52,7 +63,10 @@
 
         </ListBox>
 
-        <Views:UserControl1 Grid.Column="2" Grid.Row="1" DataContext="{Binding SalarieSelected}" Grid.RowSpan="2" Grid.ColumnSpan="10"/>
+        <GridSplitter Grid.Row="1" Grid.Column="1" Grid.RowSpan="1" Width="10" Background="LightBlue">
+        </GridSplitter>
+
+        <Views:UserControl1 Grid.Column="2" Grid.Row="1" DataContext="{Binding SalarieSelected}" Grid.RowSpan="2" Grid.ColumnSpan="7" />
 
     </Grid>
 </Window>
